# rust-full-stack

./: .gitignore  README.md
api/: Cargo.toml
api/src/: main.rs  utils.rs
api/src/mongo/: mod.rs  seed.rs
api/src/mongo/client/: mod.rs
api/src/mongo/collections/: mod.rs
api/src/mongo/db/: mod.rs
api/src/mongo/utils/: mod.rs
api/src/nba/: mod.rs
api/src/responses/: error.rs  success.rs
api/src/routes/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/button/: mod.rs
frontend/src/components/favorite_teams/: mod.rs
frontend/src/components/home/: mod.rs
frontend/src/components/loader/: mod.rs
frontend/src/components/navbar/: mod.rs
frontend/src/components/route/: mod.rs
frontend/src/components/team/: mod.rs
frontend/src/components/teams/: mod.rs
frontend/src/utils/: mod.rs
types/: Cargo.toml
types/src/: lib.rs
