[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-console = "0.2.3"
yew-router = "0.16"
types = { path = "../types" }
