[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = "0.3.60"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-console = "0.2.3"
yew-router = "0.16"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-storage = "0.2.2"
serde_json = "1.0.86"
reqwest = "0.11.12"
types = { path = "../types" }


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "js"
]
